--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-slack = "0.22.0"
-serde_json = "1.0"
+actix-web = "2.0.0"
+actix-rt = "1.0.0"
+env_logger = "0.6"
