--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2018"
 [dependencies]
 actix-web = "2.0.0"
 actix-rt = "1.0.0"
-env_logger = "0.6"
+
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
