--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 actix-web = { version="2.0.0", features=["openssl"] }
 actix-rt = "1.0.0"
+actix = "0.9"
 
 serde = "1.0"
 serde_json = "1.0"
@@ -20,3 +21,4 @@ slack = "0.22.0"
 slack_api = "0.21.0"
 
 reqwest = { version = "0.10", features = ["json", "blocking"] }
+tokio = { version = "0.2.0", features = ["full"] }
