--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ reqwest = { version = "0.10", features = ["json", "blocking"] }
 tokio = { version = "0.2.0", features = ["full"] }
 
 ctrlc = "3.0"
+futures = "0.3"
