--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,7 @@ reqwest = { version = "0.10", features = ["json", "blocking"] }
 tokio = { version = "0.2.0", features = ["full"] }
 
 ctrlc = "3.0"
+hmac = "0.7.1"
+sha2 = "0.8.1"
+
 futures = "0.3"
